--- a/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.nuspec
+++ b/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.nuspec
@@ -5,20 +5,13 @@
         <version>$version$</version>
         <title>Rest API for Commerce</title>
         <authors>The EPiCode Community</authors>
-        <projectUrl>https://www.coderesort.com/p/epicode/browser/commercerestapi</projectUrl>
+        <projectUrl>https://github.com/BVNetwork/CommerceRestApi</projectUrl>
         <iconUrl>http://www.coderesort.com/favicon.ico</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>A REST API for EPiServer Commerce.</description>
+        <description>A simple REST API for EPiServer Commerce for development purposes. This toolset should be treated as a utility box for your development project.</description>
         <releaseNotes />
         <dependencies>
             <dependency id="Microsoft.AspNet.WebApi" version="5.1.2" />
         </dependencies>
     </metadata>
-    <!--<files>
-        <file src="bin\debug\EPiCode.Commerce.RestService.dll"
-              target="lib\net45\EPiCode.Commerce.RestService.dll" />
-        <file src="bin\debug\EPiCode.Commerce.RestService.dll"
-              target="lib\net451\EPiCode.Commerce.RestService.dll" />
-    </files>-->
-
 </package>
