--- a/src/EPiCode.Commerce.RestApi/packages.config
+++ b/src/EPiCode.Commerce.RestApi/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="OctoPack" version="3.0.41" targetFramework="net45" developmentDependency="true" />
 </packages>
