id token does only work for csproj
When packing using nuspec we're not providing this.

--- a/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.nuspec
+++ b/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.nuspec
@@ -16,7 +16,7 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="bin\$configuration$\$id$.dll"
+        <file src="bin\$configuration$\EPiCode.Commerce.RestApi.dll"
               target="lib\net45\" />
     </files>
 
