Added create return action to OrderController

--- a/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.csproj
+++ b/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.csproj
@@ -120,8 +120,13 @@
   <ItemGroup>
     <Compile Include="ApiInitializer.cs" />
     <Compile Include="ChangeNotificationController.cs" />
+    <Compile Include="Contracts\ICreditPaymentCreator.cs" />
+    <Compile Include="Contracts\IOrderFormPaymentRetriever.cs" />
+    <Compile Include="Contracts\IReturnFormTotalCalculator.cs" />
+    <Compile Include="Contracts\IReturnOrderValidator.cs" />
     <Compile Include="Converters\MoneyConverter.cs" />
     <Compile Include="Converters\CustomerPricingConverter.cs" />
+    <Compile Include="DataObjects\ReturnInfo.cs" />
     <Compile Include="InventoryControllery.cs" />
     <Compile Include="PriceController.cs" />
     <Compile Include="ContactController.cs" />
