--- a/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.nuspec
+++ b/src/EPiCode.Commerce.RestApi/EPiCode.Commerce.RestApi.nuspec
@@ -3,16 +3,17 @@
     <metadata>
         <id>EPiCode.Commerce.RestApi</id>
         <!-- Only for locally created packages -->
-        <version>1.1.13</version>
+        <version>2.0.0</version>
         <title>Rest API for Commerce</title>
         <authors>The EPiCode Community</authors>
         <projectUrl>https://github.com/BVNetwork/CommerceRestApi</projectUrl>
         <iconUrl>http://www.coderesort.com/favicon.ico</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>A simple REST API for EPiServer Commerce for development purposes. This toolset should be treated as a utility box for your development project.</description>
+        <description>A simple REST API for Episerver Commerce for development purposes only. This toolset should be treated as a utility box for your development project and not run in production environments.</description>
         <releaseNotes />
         <dependencies>
-            <dependency id="Microsoft.AspNet.WebApi" version="5.1.2" />
+            <dependency id="Microsoft.AspNet.WebApi" version="5.2.3" />
+			<dependency id="EPiServer.Commerce.Core" version="[10.0.0, 11.0)"  />
         </dependencies>
     </metadata>
     <files>
